// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package GameService;

// The greeting service definition.
service Lobby {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc Login(LoginRequest) returns (stream LoginReply) {}

  rpc StartPlay(StartPlayRequest) returns (stream StartPlayReply) {}

}

enum ErrorCode
{
	Success = 0;
	LostSession = 1;
	BusyServer = 2;
	Timeout = 3;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message LoginRequest {
  string name = 1;
}

message LoginReply {
  string SessionId = 1;
}

message StartPlayRequest {
  string SessionId = 1;
}

message StartPlayReply {
  ErrorCode code = 1;
  bool IsStart = 2;
  string BattleServerAddr = 3;
  int32 WorldId = 4;
}
